[gd_scene load_steps=13 format=2]

[ext_resource path="res://Characters/Players/Knight/Knight.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Players/Mage/Mage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Rooms.gd" type="Script" id=4]
[ext_resource path="res://Art/progress bar.png" type="Texture" id=5]
[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/health_ui.png" type="Texture" id=6]
[ext_resource path="res://UI.gd" type="Script" id=7]
[ext_resource path="res://Characters/Players/Shieldman/Shieldman.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/Players/Assassin/Assassin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Characters/Players/Bomber/Bomber.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Art/Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="HealthBar" type="TextureProgress" parent="UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 16.0
value = 23.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.878431, 0.0823529, 0.0823529, 1 )

[node name="Tween" type="Tween" parent="UI/HealthBar"]

[node name="ScoreLabel" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -57.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="Rooms" type="Navigation2D" parent="."]
z_index = -2
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="Knight" parent="Players" instance=ExtResource( 1 )]

[node name="Mage" parent="Players" instance=ExtResource( 2 )]

[node name="Shieldman" parent="Players" instance=ExtResource( 8 )]

[node name="Assassin" parent="Players" instance=ExtResource( 9 )]

[node name="Bomber" parent="Players" instance=ExtResource( 10 )]

[connection signal="game_over" from="Players/Knight" to="UI" method="_on_Player_game_over"]
[connection signal="hp_changed" from="Players/Knight" to="UI" method="_on_Player_hp_changed"]
[connection signal="max_hp_changed" from="Players/Knight" to="UI" method="_on_Player_max_hp_changed"]
[connection signal="game_over" from="Players/Mage" to="UI" method="_on_Player_game_over"]
[connection signal="hp_changed" from="Players/Mage" to="UI" method="_on_Player_hp_changed"]
[connection signal="max_hp_changed" from="Players/Mage" to="UI" method="_on_Player_max_hp_changed"]
[connection signal="game_over" from="Players/Shieldman" to="UI" method="_on_Player_game_over"]
[connection signal="hp_changed" from="Players/Shieldman" to="UI" method="_on_Player_hp_changed"]
[connection signal="max_hp_changed" from="Players/Shieldman" to="UI" method="_on_Player_max_hp_changed"]
[connection signal="game_over" from="Players/Assassin" to="UI" method="_on_Player_game_over"]
[connection signal="hp_changed" from="Players/Assassin" to="UI" method="_on_Player_hp_changed"]
[connection signal="max_hp_changed" from="Players/Assassin" to="UI" method="_on_Player_max_hp_changed"]
[connection signal="game_over" from="Players/Bomber" to="UI" method="_on_Player_game_over"]
[connection signal="hp_changed" from="Players/Bomber" to="UI" method="_on_Player_hp_changed"]
[connection signal="max_hp_changed" from="Players/Bomber" to="UI" method="_on_Player_max_hp_changed"]
